# skabelon-proces

./: .gitignore  Main2.py  Test af TRIN i Item data.py  Test4.py  behandel.py  main.py  proces_skabelon_haderslev_forslag.py  pyproject.toml
